Fix Table Component heading alignment in IE

--- a/components/_table.sass
+++ b/components/_table.sass
@@ -95,6 +95,7 @@ $table-space-s: 0.5 * $table-space !default
   border-top: 0
   font-size: $table-fontSize-s
   padding: $table-space-s $table-space
+  text-align: left
   text-transform: uppercase
   vertical-align: bottom
 
